Add support for processor versions, particularly 6805-C9 and 6805-RC16/18
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@346 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -345,9 +345,9 @@ Code.S3C80=43 8B 11 8B 12 85 49 08 05 01 0B 02 F6 01 0B 05 \
 Code.740=0c 18 11 80 0c e0 e2 00 15 08 05 02 ee 04 5b 06 \
          4f a9 15 20 db 00 a2 d7 a0 06 22 44 a5 5d 85 54 \
          a5 5e 85 5d a5 54 85 5e 4c 00 ff
-Code.6805=0C 19 11 20 0E E0 70 15 08 05 02 ED 04 59 06 9B \
-          15 08 BC B6 5A B7 51 B6 5B B7 5A B6 51 B7 5B CD \
-          01 83 12 7C 19 7C CC 01 83
+Code.6805-C9=0C 19 11 20 0E E0 70 15 08 05 02 ED 04 59 06 9B \
+             15 08 BC B6 5A B7 51 B6 5B B7 5A B6 51 B7 5B CD \
+             01 83 12 7C 19 7C CC 01 83
 
 [Dishplayer (old)]
 PID=00 02
@@ -385,9 +385,9 @@ Notes=Standard SAT/0775 is Unit 0 / Device 0 \
 FixedData=00 00
 Code.S3C80=2B 5C 21 8B 14 B7 59 05 06 00 C5 03 32 00 C5 05 \
            73 0B F2 00 C5 0B F2 05 02 8D 01 46
-Code.6805=06 0E 21 20 12 B8 72 17 05 06 03 18 04 99 02 A3 \
-          17 08 E9 00 04 01 29 07 5B 08 B6 75 B7 6E B6 76 \
-          B7 6F 33 5A 3C 59 CC 01 83
+Code.6805-C9=06 0E 21 20 12 B8 72 17 05 06 03 18 04 99 02 A3 \
+             17 08 E9 00 04 01 29 07 5B 08 B6 75 B7 6E B6 76 \
+             B7 6F 33 5A 3C 59 CC 01 83
 
 [Dishplayer (old)]
 PID=00 02
@@ -467,6 +467,22 @@ Code.S3C80=3D 91 01 8B 12 C5 45 08 04 01 F4 05 C8 01 F4 01 \
            C1 D0 C1 B2 01 F0 C1 56 C1 C0 D0 C1 B2 01 90 C1 \
            56 C1 40 B2 01 18 03 E0 C1 B2 01 09 04 20 10 8D \
            01 46
+Code.6805-C9=0B 1B 01 20 0E E0 72 26 08 04 04 D2 02 39 58 0D \
+             C0 03 8A 3F 7D 3F 5B BE 5A A6 C0 AD 2A A6 60 AD \
+             26 A6 30 AD 22 A6 D0 AD 1E A6 A0 AD 1A A6 50 AD \
+             16 A6 E0 AD 12 A6 F0 AD 0E BE 5B 2A 02 AD 0F 58 \
+             26 F9 3C 66 CC 01 83 58 24 10 B8 5B B7 5B B6 6F \
+             A0 98 B7 6F B6 6E A2 02 B7 6E 81
+Code.6805-RC16/18=0F 26 01 20 10 C5 45 08 04 02 F9 EE 00 F9 FA 61 \
+                  A8 00 41 E1 F4 4F 0F 5A 02 A8 C0 0D 5A 02 A8 60 \
+                  0B 5A 02 A8 30 09 5A 02 A8 D0 07 5A 02 A8 A0 05 \
+                  5A 02 A8 50 03 5A 02 A8 E0 01 5A 02 A8 F0 B7 5B \
+                  3C 67 CC 01 AF
+Code.740=0B 19 01 80 0F E0 B2 01 26 08 04 04 D3 02 3A 61 \
+         A8 C0 03 8A A9 00 F7 5D 02 49 C0 D7 5D 02 49 60 \
+         B7 5D 02 49 30 97 5D 02 49 D0 77 5D 02 49 A0 57 \
+         5D 02 49 50 37 5D 02 49 E0 17 5D 02 49 F0 85 5E \
+         E6 69 4C 00 FF
 
 [GI 4DTV Official]
 PID=00 A4
@@ -1034,11 +1050,11 @@ Code.740=0A 18 31 80 10 F6 B8 01 16 08 08 01 9F 02 FF 57 \
 #         7F 4C 00 FF 3C 01 69 3C 00 5B A5 61 85 57 A5 5E \
 #         85 88 20 00 FF 3C 04 69 3C 02 5B A5 57 85 60 20 \
 #         00 FF 22 06 90 DE 60
-#Code.6805=0A 19 42 20 10 F6 F8 00 16 08 08 01 9B 02 FB 1F \
-#          EB 55 06 76 02 03 5F 04 B6 5B B7 5D 00 5F 05 10 \
-#          7C CC 01 83 A6 01 B7 66 BE 5E B6 5B BF 53 B7 5D \
-#          CD 01 83 A6 04 B7 66 A6 02 B7 58 BE 53 BF 5D CD \
-#          01 83 3A 58 3A 58 CD 01 8C 24 D9 81
+#Code.6805-C9=0A 19 42 20 10 F6 F8 00 16 08 08 01 9B 02 FB 1F \
+#             EB 55 06 76 02 03 5F 04 B6 5B B7 5D 00 5F 05 10 \
+#             7C CC 01 83 A6 01 B7 66 BE 5E B6 5B BF 53 B7 5D \
+#             CD 01 83 A6 04 B7 66 A6 02 B7 58 BE 53 BF 5D CD \
+#             01 83 3A 58 3A 58 CD 01 8C 24 D9 81
 #
 [Pioneer 2CMD]
 PID=00 5F
@@ -1134,10 +1150,10 @@ Code.S3C80=40 9A 12 8B 17 89 81 10 08 08 01 BB 01 A8 01 BB \
 Code.740=0C 1C 12 80 0C E9 C0 20 20 08 08 02 07 02 06 03 \
          78 17 5A 02 AF 5D 3C 04 77 2F 5C 3C C0 7E 22 00 \
          3C A8 7E 22 00 A2 78 A0 5D 22 44 4C 03 FF
-Code.6805=0C 1D 12 20 11 C0 C0 20 20 08 08 02 13 02 0A 03 \
-          F9 00 00 00 00 04 01 57 06 B6 5A A8 20 B7 5A A6 \
-          02 B7 59 A6 C0 B7 7B CD 01 83 A6 A8 B7 7B CD 01 \
-          83 A6 5D AE 08 CD 01 9E CD 01 8C 24 E2 81
+Code.6805-C9=0C 1D 12 20 11 C0 C0 20 20 08 08 02 13 02 0A 03 \
+             F9 00 00 00 00 04 01 57 06 B6 5A A8 20 B7 5A A6 \
+             02 B7 59 A6 C0 B7 7B CD 01 83 A6 A8 B7 7B CD 01 \
+             83 A6 5D AE 08 CD 01 9E CD 01 8C 24 E2 81
 
 #[RC-5/5x Combo]
 #PID=00 73
@@ -1186,12 +1202,12 @@ Code.740=0E 19 21 80 0F E1 92 11 10 08 04 01 83 01 80 67 \
          26 61 26 60 26 5F 2A CA D0 F4 85 5E 3C 05 69 4C \
          00 FF A2 04 0A 38 2A 06 54 90 02 49 03 CA D0 F4 \
          60
-Code.6805=09 1F 21 A6 60 BD B7 AD 4A CD 01 92 A6 04 97 AD \
-          1B 00 57 02 AD 3D A6 20 BD B7 01 57 02 AD 34 A6 \
-          0D 4A 26 FD 5F 5C E6 5A B7 50 A6 08 B7 51 0E 50 \
-          02 AD 22 A6 10 BD B7 0F 50 02 AD 19 38 50 3A 51 \
-          9D 26 18 A3 02 25 DE 26 11 A6 6C AE 90 CD 01 9E \
-          CC 01 89 AD 00 A6 8D 4A 26 FD 81 AD FD 20 CF
+Code.6805-C9=09 1F 21 A6 60 BD B7 AD 4A CD 01 92 A6 04 97 AD \
+             1B 00 57 02 AD 3D A6 20 BD B7 01 57 02 AD 34 A6 \
+             0D 4A 26 FD 5F 5C E6 5A B7 50 A6 08 B7 51 0E 50 \
+             02 AD 22 A6 10 BD B7 0F 50 02 AD 19 38 50 3A 51 \
+             9D 26 18 A3 02 25 DE 26 11 A6 6C AE 90 CD 01 9E \
+             CC 01 89 AD 00 A6 8D 4A 26 FD 81 AD FD 20 CF
 
 
 [RC6-M-20n]
@@ -1293,9 +1309,9 @@ Code.S3C80=28 60 11 8B 12 95 45 04 08 00 FA 03 D4 00 FA 01 \
            E0 0F 8C 07 D0 07 BC 8D 01 46
 Code.740=05 0E 11 80 0E F4 72 1D 04 08 03 85 02 38 08 97 \
          E4 06 2B 4C 00 FF
-Code.6805=06 0E 11 20 0F F4 F0 00 1C 04 08 02 26 03 82 08 \
-          9B E2 06 06 33 5A 33 5B CD 01 83 CD 01 8C 24 F8 \
-          81
+Code.6805-C9=06 0E 11 20 0F F4 F0 00 1C 04 08 02 26 03 82 08 \
+             9B E2 06 06 33 5A 33 5B CD 01 83 CD 01 8C 24 F8 \
+             81
 
 [RCA (Old)]
 PID=00 2D
@@ -1336,9 +1352,9 @@ Code.740=07 0C 02 80 0E F4 72 1D 04 08 03 87 02 3A 08 E8 \
 #Code.S3C80=28 60 02 8B 12 95 45 04 08 00 FA 03 D4 00 FA 01 \
 #           E0 0F 8C 07 D0 07 BC 20 10 00 11 E6 0D 00 8D 01 \
 #           46
-#Code.6805=06 0e 02 20 0f f4 f0 00 1c 04 08 02 26 03 82 08 \
-#          9b e2 06 06 33 5a 33 5b cd 01 83 cd 01 8c 24 f8 \
-#          81
+#Code.6805-C9=06 0e 02 20 0f f4 f0 00 1c 04 08 02 26 03 82 08 \
+#             9b e2 06 06 33 5a 33 5b cd 01 83 cd 01 8c 24 f8 \
+#             81
 #
 [RECS80 (45)]
 PID=00 45
@@ -1407,12 +1423,12 @@ Code.S3C80=47 93 71 8B 12 87 05 08 04 00 DE 00 00 00 00 00 \
 #         56 3C 08 57 26 56 B0 0D A2 86 A0 01 22 44 A9 10 \
 #         20 DB 00 80 0B A9 10 20 DB 00 A2 86 A0 01 22 44 \
 #         C6 57 D0 E0 60
-#Code.6805=0d 1c 31 a6 60 bd b7 a6 02 ae 18 cd 01 9f 9d 9d \
-#          cd 01 92 a6 04 97 ad 27 a6 02 ae 18 cd 01 9f 9d \
-#          9d a6 20 bd b7 b6 5b ad 12 b6 5c ad 0e b6 5d ad \
-#          0a a6 b3 ae dd cd 01 9e cc 01 89 b7 50 a6 08 b7 \
-#          51 0e 50 02 ad 12 a6 10 bd b7 0f 50 02 ad 09 38 \
-#          50 3a 51 26 ec 81 ad 00 a6 8d 4a 26 fd 26 00 81
+#Code.6805-C9=0d 1c 31 a6 60 bd b7 a6 02 ae 18 cd 01 9f 9d 9d \
+#             cd 01 92 a6 04 97 ad 27 a6 02 ae 18 cd 01 9f 9d \
+#             9d a6 20 bd b7 b6 5b ad 12 b6 5c ad 0e b6 5d ad \
+#             0a a6 b3 ae dd cd 01 9e cc 01 89 b7 50 a6 08 b7 \
+#             51 0e 50 02 ad 12 a6 10 bd b7 0f 50 02 ad 09 38 \
+#             50 3a 51 26 ec 81 ad 00 a6 8d 4a 26 fd 26 00 81
 #
 #[ReplayTV (Advanced)]
 #OldNames=ReplayTV Hacked,ReplayTV 1994
@@ -1462,12 +1478,12 @@ Code.740=0C 1C 22 A9 60 20 DB 00 A2 16 A0 02 22 44 A5 5D \
          56 3C 08 57 26 56 B0 0D A2 86 A0 01 22 44 A9 10 \
          20 DB 00 80 0B A9 10 20 DB 00 A2 86 A0 01 22 44 \
          C6 57 D0 E0 60
-Code.6805=0D 1C 22 A6 60 BD B7 A6 02 AE 18 CD 01 9F 9D 9D \
-          CD 01 92 A6 04 97 AD 27 A6 02 AE 18 CD 01 9F 9D \
-          9D A6 20 BD B7 B6 5B AD 12 B6 5C AD 0E B6 5D AD \
-          0A A6 B3 AE DD CD 01 9E CC 01 89 B7 50 A6 08 B7 \
-          51 0E 50 02 AD 12 A6 10 BD B7 0F 50 02 AD 09 38 \
-          50 3A 51 26 EC 81 AD 00 A6 8D 4A 26 FD 26 00 81
+Code.6805-C9=0D 1C 22 A6 60 BD B7 A6 02 AE 18 CD 01 9F 9D 9D \
+             CD 01 92 A6 04 97 AD 27 A6 02 AE 18 CD 01 9F 9D \
+             9D A6 20 BD B7 B6 5B AD 12 B6 5C AD 0E B6 5D AD \
+             0A A6 B3 AE DD CD 01 9E CC 01 89 B7 50 A6 08 B7 \
+             51 0E 50 02 AD 12 A6 10 BD B7 0F 50 02 AD 09 38 \
+             50 3A 51 26 EC 81 AD 00 A6 8D 4A 26 FD 26 00 81
 
 [Sharp]
 PID=00 1C
@@ -1544,13 +1560,13 @@ Code.S3C80=3A 8A 31 8B 14 F6 15 05 07 02 58 01 18 01 2C 01 \
 Code.740=0A 18 31 80 12 B8 92 09 30 05 07 01 B6 01 B6 2B \
          F2 60 01 BA 01 08 18 44 5D E6 5C 17 60 05 3C 02 \
          5B 7F 7E 3C 02 83 4C 00 FF
-Code.6805=0A 19 31 20 12 B8 90 08 30 05 07 01 B5 01 B5 12 \
-          C7 60 01 BA 00 08 18 A6 22 00 5D 02 A6 0A B7 53 \
-          AE 07 B6 5D AD 3B AE 05 00 5D 0E B6 5A AD 32 AE \
-          08 B6 5B AD 2C 3C 59 20 08 B6 5C B7 5A AD 22 17 \
-          7B 33 5A B6 53 B7 54 A6 02 B7 7E B6 54 B7 53 CD \
-          01 83 A6 AE 4A 26 FD 3A 53 26 F7 CD 01 8C 24 EB \
-          81 48 25 02 3C 53 5A 26 F8 81
+Code.6805-C9=0A 19 31 20 12 B8 90 08 30 05 07 01 B5 01 B5 12 \
+             C7 60 01 BA 00 08 18 A6 22 00 5D 02 A6 0A B7 53 \
+             AE 07 B6 5D AD 3B AE 05 00 5D 0E B6 5A AD 32 AE \
+             08 B6 5B AD 2C 3C 59 20 08 B6 5C B7 5A AD 22 17 \
+             7B 33 5A B6 53 B7 54 A6 02 B7 7E B6 54 B7 53 CD \
+             01 83 A6 AE 4A 26 FD 3A 53 26 F7 CD 01 8C 24 EB \
+             81 48 25 02 3C 53 5A 26 F8 81
 
 [Sony Combo (old)]
 PID=00 27
@@ -1587,10 +1603,10 @@ Code.740=0A 18 42 80 12 A8 92 09 30 05 07 01 B6 01 B6 2B \
          3C 01 5C 3C B8 7E A5 62 6A 29 03 AA B5 5D 85 5E \
          A5 62 85 5D 44 5D 80 03 3C 05 77 3C 02 83 4C 00 \
          FF
-Code.6805=0F 23 42 20 13 F8 15 05 07 10 2B 96 00 95 96 2B \
-          F2 00 20 57 96 08 03 08 00 5E 16 01 5F 0F A6 F9 \
-          B7 7B A6 08 B7 67 B6 5F 46 A4 03 B7 58 A6 05 B7 \
-          77 CC 01 B2
+Code.6805-C9=0F 23 42 20 13 F8 15 05 07 10 2B 96 00 95 96 2B \
+             F2 00 20 57 96 08 03 08 00 5E 16 01 5F 0F A6 F9 \
+             B7 7B A6 08 B7 67 B6 5F 46 A4 03 B7 58 A6 05 B7 \
+             77 CC 01 B2
 
 [Sony DSP]
 PID=01 42
@@ -1652,9 +1668,9 @@ Code.S3C80=43 8d 31 8b 12 cf 44 08 08 01 1a 01 06 01 1a 03 \
 Code.740=0D 18 31 80 15 E3 BE 01 16 08 08 01 A4 03 15 6B \
          AB 55 06 C7 02 00 01 01 03 E5 A5 60 AA 49 FF 09 \
          F0 25 5F 85 60 86 5F 4C 00 FF
-Code.6805=0D 19 31 20 15 C1 FE 00 16 08 08 01 9D 03 0E 38 \
-          FB 56 06 C3 02 00 7E A5 03 DB A6 04 B7 66 B6 5D \
-          97 43 AA F0 B4 5C B7 5D BF 5C CC 01 83
+Code.6805-C9=0D 19 31 20 15 C1 FE 00 16 08 08 01 9D 03 0E 38 \
+             FB 56 06 C3 02 00 7E A5 03 DB A6 04 B7 66 B6 5D \
+             97 43 AA F0 B4 5C B7 5D BF 5C CC 01 83
 
 [TiVo (Official)]
 OldNames=Tivo (Official)
@@ -1672,9 +1688,9 @@ Code.S3C80=43 8d 31 8b 12 cf 44 08 08 01 1a 01 06 01 1a 03 \
 Code.740=0D 18 31 80 15 E3 BE 01 16 08 08 01 A4 03 15 6B \
          AB 55 06 C7 02 00 01 01 03 E5 A5 60 AA 49 FF 09 \
          F0 25 5F 85 60 86 5F 4C 00 FF
-Code.6805=0D 19 31 20 15 C1 FE 00 16 08 08 01 9D 03 0E 38 \
-          FB 56 06 C3 02 00 7E A5 03 DB A6 04 B7 66 B6 5D \
-          97 43 AA F0 B4 5C B7 5D BF 5C CC 01 83
+Code.6805-C9=0D 19 31 20 15 C1 FE 00 16 08 08 01 9D 03 0E 38 \
+             FB 56 06 C3 02 00 7E A5 03 DB A6 04 B7 66 B6 5D \
+             97 43 AA F0 B4 5C B7 5D BF 5C CC 01 83
 
 [TiVo (Official 2-byte)]
 OldNames=TiVo Official,Tivo Official,Tivo (Official 2-byte)
@@ -1692,9 +1708,9 @@ Code.S3C80=43 8D 22 8B 12 CF 44 08 08 01 1A 01 06 01 1A 03 \
            31 D7 42 11 A7 08 B7 F6 01 46 46 29 0D 8D 01 49
 Code.740=0D 18 22 80 15 E3 BE 01 16 08 08 01 A4 03 15 6B \
          AB 55 06 C7 02 00 01 01 03 E5 E6 69 4C 00 FF
-Code.6805=0D 19 22 20 15 C1 FE 00 16 08 08 01 9D 03 0E 38 \
-          FB 56 06 C3 02 00 7E A5 03 DB A6 04 B7 66 CC 01 \
-          83
+Code.6805-C9=0D 19 22 20 15 C1 FE 00 16 08 08 01 9D 03 0E 38 \
+             FB 56 06 C3 02 00 7E A5 03 DB A6 04 B7 66 CC 01 \
+             83
 
 [X10]
 PID=00 3F
