Add missing FixedData=00 to JVC protocol.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@356 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -545,6 +545,7 @@ CmdTranslator=Translator(lsb,comp)
 Notes=
 DevParms=Device=0
 DeviceTranslator=Translator(lsb,comp)
+FixedData=00
 Code.S3C80=43 8B 11 8B 19 C5 C9 80 20 08 08 01 07 00 F4 01 \
            07 03 03 73 50 10 7C 08 2A 00 00 00 5A 95 20 0D \
            20 0D 8D 01 46
@@ -962,7 +963,7 @@ Notes=Combines Pansonic signals with multiple device and subdevice numbers. \
 Code.S3C80=45 91 82 8B 12 8F 45 08 08 00 DA 00 C6 00 DA 02 \
            7B 90 C9 06 D0 03 54 0C 03 1C 02 93 C0 C2 04 0C \
            0C FB 03 83 C1 C2 EB F3 E4 0B 07 E4 05 08 B4 06 \
-           08 B4 07 08 E0 10 8D 01 46  
+           08 B4 07 08 E0 10 8D 01 46
 
 [Panasonic Combo2]
 PID=00 CD
