Added 6805-C9 and 6805-RC16/18 code for NEC1 and NEC2 protocols Added support for NEC1 2DEV Combo protocol Added support for NECx1 and NECx2 protocols Added support for Pioneer DVD2 protocol Added support for Pioneer 3DEV protocol
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@357 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -14,7 +14,9 @@
 #      - bits, the number of bits to used to store the value
 #      - a bar (|) separated list of choices.
 #      <default value> is the default value to be used.  If there is a choice
-#      list, it is the index of the default choice.
+#      list, it is the index of the default choice.  If the default value is in square brackets,
+#      it is the index of the device parameter from which to get the default value.  If the index is
+#      preceeded by a dash (-) it means the default value will be calculated by subtracting from the maximum allowable #      value (this essentially mean complementing it).
 # DeviceTranslator=className(parms)
 #      provides mapping between DevParms and fixed data
 #      className is the name of a class that extends the class
@@ -25,6 +27,7 @@
 #          bits is the number of bits to use (default = 8)
 #          msbOffset is an msb bit position within fixed data (default=0)
 #          lsbOffset is an lsb bit position within the DevParms item (default=0)
+#          adjust is a value to add to the extracted data, default=0
 #          lsb and comp are keyword parmeters (nonpositional)
 #      XorCheck(bits,destOffset,seed,count,sourceOffset,step)
 #          computes an xor check field within fixed data from other fields
@@ -636,6 +639,21 @@ Code.740=0B 1A 31 80 15 F6 B8 01 16 08 08 01 A1 03 17 69 \
          5F B7 5D 03 3C EE 7E 07 5D 20 77 5D 04 22 09 90 \
          19 37 5D 02 22 00 97 5D 0F 22 00 3C C0 7E 44 5E \
          3C 01 6B 22 06 90 03 60 4F 7F 2F 7F 4C 00 FF
+Code.6805-C9=0B 1A 31 20 15 F6 F8 00 16 08 08 01 A3 03 18 34 \
+              0F 56 06 C3 02 08 7C 98 03 D8 3C 58 A6 02 B7 59 \
+              09 5A 06 17 7C A6 AE B7 70 0A 5A 07 CD 01 AD 25 \
+              02 3C 58 0B 5A 04 A6 EE B7 7B 00 5A 2B 07 5A 05 \
+              CD 01 86 24 23 09 5A 1E CD 01 83 A6 06 AE 89 CD \
+              01 9F A6 C0 B7 7B 33 5B A6 01 B7 68 B6 75 BE 75 \
+              B7 6E BF 6F 20 02 14 7C 12 7C CD 01 83 81
+Code.6805-RC16/18=11 24 31 20 14 CF 4D 08 08 00 8B 8D 01 8B A7 69 \
+                  78 00 84 C9 65 00 44 64 65 3C 58 05 5A 1E CD 01 \
+                  A1 25 19 0A 5A 08 B6 5C B7 5B 33 5C 20 16 A6 80 \
+                  B8 5B B7 5B A6 80 B8 5C B7 5C 20 08 0A 5A 05 B6 \
+                  5B 43 B7 5C B6 5D 43 B7 5E 3C DD 07 5A 05 CD 01 \
+                  83 24 03 01 5A 02 17 7D 08 5A 03 CC 01 B2 AE 04 \
+                  E6 75 E7 71 5A 26 F9 00 5A F1 A6 44 B7 7D CD 01 \
+                  B2 A6 C1 B7 7C 10 7D 33 5B A6 01 B7 68 CC 01 AF
 
 [NEC2]
 PID=00 5A
@@ -660,6 +678,21 @@ Code.740=0B 1A 31 80 15 F6 B8 01 16 08 08 01 A1 03 17 69 \
          5F B7 5D 03 3C EE 7E 07 5D 20 77 5D 04 22 09 90 \
          19 37 5D 02 22 00 97 5D 0F 22 00 3C C0 7E 44 5E \
          3C 01 6B 22 06 90 03 60 4F 7F 2F 7F 4C 00 FF
+Code.6805-C9=0B 1A 31 20 15 F6 F8 00 16 08 08 01 A3 03 18 34 \
+              0F 56 06 C3 02 08 7C 98 03 D8 3C 58 A6 02 B7 59 \
+              09 5A 06 17 7C A6 AE B7 70 0A 5A 07 CD 01 AD 25 \
+              02 3C 58 0B 5A 04 A6 EE B7 7B 00 5A 2B 07 5A 05 \
+              CD 01 86 24 23 09 5A 1E CD 01 83 A6 06 AE 89 CD \
+              01 9F A6 C0 B7 7B 33 5B A6 01 B7 68 B6 75 BE 75 \
+              B7 6E BF 6F 20 02 14 7C 12 7C CD 01 83 81
+Code.6805-RC16/18=11 24 31 20 14 CF 4D 08 08 00 8B 8D 01 8B A7 69 \
+                  78 00 84 C9 65 00 44 64 65 3C 58 05 5A 1E CD 01 \
+                  A1 25 19 0A 5A 08 B6 5C B7 5B 33 5C 20 16 A6 80 \
+                  B8 5B B7 5B A6 80 B8 5C B7 5C 20 08 0A 5A 05 B6 \
+                  5B 43 B7 5C B6 5D 43 B7 5E 3C DD 07 5A 05 CD 01 \
+                  83 24 03 01 5A 02 17 7D 08 5A 03 CC 01 B2 AE 04 \
+                  E6 75 E7 71 5A 26 F9 00 5A F1 A6 44 B7 7D CD 01 \
+                  B2 A6 C1 B7 7C 10 7D 33 5B A6 01 B7 68 CC 01 AF
 
 [NEC Combo]
 PID=01 40
@@ -700,24 +733,107 @@ Code.S3C80=43 8B 12 8B 12 CF 4D 08 08 01 18 01 06 01 18 03 \
            39 D2 DC 11 94 08 B6 E4 05 06 60 06 20 10 8D 01 \
            46
 
-#[NEC1 2DEV Combo]
-#PID=01 41
-#CmdTranslator=Translator(lsb,comp,0,8,8)
-#CmdParms=OBC=0
-#Notes=38.1 kHz
-#DevParms=Device 1,Sub Device 1,Device 2,Sub Device 2
-#FixedData=ff 00 ff 00 00 00
-#DefaultCmd=00 00
-#CmdIndex=1
-#Code.S3C80=43 8B 22 8B 12 CF 44 08 08 01 18 01 06 01 18 03 \
-#           39 D2 DC 11 94 08 B6 20 01 76 05 80 EB 08 E6 04 \
-#           FE E6 05 F1 8B 06 E6 04 BE E6 05 B1 E4 06 07 60 \
-#           07 20 10 46 29 0D 8D 01 49
-#Code.740=0B 1A 22 80 15 E3 BE 01 16 08 08 01 A1 03 17 69 \
-#         78 54 06 C7 02 08 01 01 03 DB E7 5F 08 3C FE 5D \
-#         3C F1 5E 80 06 3C BE 5D 3C B1 5E A5 60 85 5F 44 \
-#         60 E6 69 4C 00 FF
-#
+[NEC1 2DEV Combo]
+PID=01 41
+DevParms=Device 1,Sub Device 1=[-0],Device 2,Sub Device 2=[-2]
+DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) \
+                 Translator(lsb,comp,2,8,16) Translator(lsb,comp,3,8,24)
+FixedData=ff 00 ff 00
+FixedData.S3C80=ff 00 ff 00 00 00
+CmdTranslator=Translator(lsb,0,8,0) Translator(lsb,comp,1,8,8)
+CmdParms=Device:0|1,OBC=0
+CmdParmInit=PickInitializer(0,N0,N2)
+DefaultCmd=00 00
+CmdIndex=1
+Notes=38.1 kHz
+Code.S3C80=43 8B 22 8B 12 CF 44 08 08 01 18 01 06 01 18 03 \
+           39 D2 DC 11 94 08 B6 20 01 76 05 80 EB 08 E6 04 \
+           FE E6 05 F1 8B 06 E6 04 BE E6 05 B1 E4 06 07 60 \
+           07 20 10 46 29 0D 8D 01 49
+Code.740=0B 1A 22 80 15 E3 BE 01 16 08 08 01 A1 03 17 69 \
+         78 54 06 C7 02 08 01 01 03 DB E7 5F 08 3C FE 5D \
+         3C F1 5E 80 06 3C BE 5D 3C B1 5E A5 60 85 5F 44 \
+         60 E6 69 4C 00 FF
+
+[NECx1]
+PID=00 5A
+CmdTranslator=Translator(lsb,comp)
+CmdParms=OBC=0
+DevParms=Device Number,Sub Device=[0],Parm:$=30
+DeviceTranslator=Translator(lsb,comp,0,8,16) Translator(lsb,comp,1,8,8) \
+                 Translator(2,8,0)
+FixedData=30 ff ff
+Notes=38.1 kHz
+Code.S3C80=43 8B 31 8B 12 CF 44 08 08 01 18 01 06 01 18 03 \
+           39 D2 DC 11 94 08 B6 20 01 08 03 37 04 15 F6 01 \
+           46 FB 10 37 0B 07 E4 05 04 60 05 8B 0E B6 04 80 \
+           B6 05 80 37 0B 05 E4 04 05 60 05 E4 06 07 60 07 \
+           20 11 37 06 05 F6 01 04 7B 12 37 09 15 37 02 06 \
+           F6 01 49 F6 01 46 37 01 03 46 29 0D 46 29 01 8D \
+           01 49 E4 20 1E E4 21 1F 37 01 EB F6 01 49 E6 28 \
+           C1 60 04 E6 12 01 8B E4
+Code.740=0B 1A 31 80 15 F6 B8 01 16 08 08 01 A1 03 17 69 \
+         78 54 06 C7 02 08 01 01 03 DB E6 5B 3C 02 5C 97 \
+         5D 05 7F 7F 3C AE 73 57 5D 17 22 10 D0 13 A7 5D \
+         04 E6 5B 80 0C A9 80 45 5E 85 5E A9 80 45 5F 85 \
+         5F B7 5D 03 3C EE 7E 07 5D 20 77 5D 04 22 09 90 \
+         19 37 5D 02 22 00 97 5D 0F 22 00 3C C0 7E 44 5E \
+         3C 01 6B 22 06 90 03 60 4F 7F 2F 7F 4C 00 FF
+Code.6805-C9=0B 1A 31 20 15 F6 F8 00 16 08 08 01 A3 03 18 34 \
+              0F 56 06 C3 02 08 7C 98 03 D8 3C 58 A6 02 B7 59 \
+              09 5A 06 17 7C A6 AE B7 70 0A 5A 07 CD 01 AD 25 \
+              02 3C 58 0B 5A 04 A6 EE B7 7B 00 5A 2B 07 5A 05 \
+              CD 01 86 24 23 09 5A 1E CD 01 83 A6 06 AE 89 CD \
+              01 9F A6 C0 B7 7B 33 5B A6 01 B7 68 B6 75 BE 75 \
+              B7 6E BF 6F 20 02 14 7C 12 7C CD 01 83 81
+Code.6805-RC16/18=11 24 31 20 14 CF 4D 08 08 00 8B 8D 01 8B A7 69 \
+                  78 00 84 C9 65 00 44 64 65 3C 58 05 5A 1E CD 01 \
+                  A1 25 19 0A 5A 08 B6 5C B7 5B 33 5C 20 16 A6 80 \
+                  B8 5B B7 5B A6 80 B8 5C B7 5C 20 08 0A 5A 05 B6 \
+                  5B 43 B7 5C B6 5D 43 B7 5E 3C DD 07 5A 05 CD 01 \
+                  83 24 03 01 5A 02 17 7D 08 5A 03 CC 01 B2 AE 04 \
+                  E6 75 E7 71 5A 26 F9 00 5A F1 A6 44 B7 7D CD 01 \
+                  B2 A6 C1 B7 7C 10 7D 33 5B A6 01 B7 68 CC 01 AF
+[NECx2]
+PID=00 5A
+CmdTranslator=Translator(lsb,comp)
+CmdParms=OBC=0
+DevParms=Device Number,Sub Device=[0],Parm:$=31
+DeviceTranslator=Translator(lsb,comp,0,8,16) Translator(lsb,comp,1,8,8) \
+                 Translator(comp,2,8,0)
+FixedData=31 ff ff
+Notes=38.1 kHz
+Code.S3C80=43 8B 31 8B 12 CF 44 08 08 01 18 01 06 01 18 03 \
+           39 D2 DC 11 94 08 B6 20 01 08 03 37 04 15 F6 01 \
+           46 FB 10 37 0B 07 E4 05 04 60 05 8B 0E B6 04 80 \
+           B6 05 80 37 0B 05 E4 04 05 60 05 E4 06 07 60 07 \
+           20 11 37 06 05 F6 01 04 7B 12 37 09 15 37 02 06 \
+           F6 01 49 F6 01 46 37 01 03 46 29 0D 46 29 01 8D \
+           01 49 E4 20 1E E4 21 1F 37 01 EB F6 01 49 E6 28 \
+           C1 60 04 E6 12 01 8B E4
+Code.740=0B 1A 31 80 15 F6 B8 01 16 08 08 01 A1 03 17 69 \
+         78 54 06 C7 02 08 01 01 03 DB E6 5B 3C 02 5C 97 \
+         5D 05 7F 7F 3C AE 73 57 5D 17 22 10 D0 13 A7 5D \
+         04 E6 5B 80 0C A9 80 45 5E 85 5E A9 80 45 5F 85 \
+         5F B7 5D 03 3C EE 7E 07 5D 20 77 5D 04 22 09 90 \
+         19 37 5D 02 22 00 97 5D 0F 22 00 3C C0 7E 44 5E \
+         3C 01 6B 22 06 90 03 60 4F 7F 2F 7F 4C 00 FF
+Code.6805-C9=0B 1A 31 20 15 F6 F8 00 16 08 08 01 A3 03 18 34 \
+              0F 56 06 C3 02 08 7C 98 03 D8 3C 58 A6 02 B7 59 \
+              09 5A 06 17 7C A6 AE B7 70 0A 5A 07 CD 01 AD 25 \
+              02 3C 58 0B 5A 04 A6 EE B7 7B 00 5A 2B 07 5A 05 \
+              CD 01 86 24 23 09 5A 1E CD 01 83 A6 06 AE 89 CD \
+              01 9F A6 C0 B7 7B 33 5B A6 01 B7 68 B6 75 BE 75 \
+              B7 6E BF 6F 20 02 14 7C 12 7C CD 01 83 81
+Code.6805-RC16/18=11 24 31 20 14 CF 4D 08 08 00 8B 8D 01 8B A7 69 \
+                  78 00 84 C9 65 00 44 64 65 3C 58 05 5A 1E CD 01 \
+                  A1 25 19 0A 5A 08 B6 5C B7 5B 33 5C 20 16 A6 80 \
+                  B8 5B B7 5B A6 80 B8 5C B7 5C 20 08 0A 5A 05 B6 \
+                  5B 43 B7 5C B6 5D 43 B7 5E 3C DD 07 5A 05 CD 01 \
+                  83 24 03 01 5A 02 17 7D 08 5A 03 CC 01 B2 AE 04 \
+                  E6 75 E7 71 5A 26 F9 00 5A F1 A6 44 B7 7D CD 01 \
+                  B2 A6 C1 B7 7C 10 7D 33 5B A6 01 B7 68 CC 01 AF
+
 [Nokia Quad]
 PID=00 ED
 CmdTranslator=Translator()
@@ -1125,16 +1241,17 @@ Code.740=0A 18 31 80 10 F6 B8 01 16 08 08 01 9F 02 FF 57 \
          E4 5B 06 81 02 47 60 10 1F 7F 3C 00 5B 3C 01 69 \
          22 00 3C 03 69 3C 02 5B 0F 7F 4C 00 FF
 
-#[Pioneer DVD2]
-#PID=00 7E
-#CmdTranslator=Translator(lsb,comp)
-#CmdParms=OBC=0
-#Notes=DVD/0525,0571
-#DevParms=Device 1:8=163,Device 2:8=175,Command 1:8=153
-#DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,16) \
-#                  Translator(lsb,comp,2,8,8)
-#FixedData=3a 66 0a ff
-#DefaultCmd=00 00
+[Pioneer DVD2]
+PID=00 7E
+DevParms=Device 1:8=163,Device 2:8=175,Command 1:8=153
+DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,16) \
+                  Translator(lsb,comp,2,8,8)
+FixedData=3a 66 0a ff
+CmdParms=OBC=0
+CmdTranslator=Translator(lsb,comp,0,8,0) FieldCopier(comp,5,15,1)
+Notes=DVD/0525,0571
+DefaultCmd=00 00
+CmdIndex=0
 
 #[Pioneer MIX]
 #PID=00 7E
@@ -1162,8 +1279,8 @@ Code.740=0A 18 31 80 10 F6 B8 01 16 08 08 01 9F 02 FF 57 \
 #
 [Pioneer 2CMD]
 PID=00 5F
-CmdTranslator=Translator(lsb,0,8,0), Translator(lsb,1,8,8)
 CmdParms=OBC=0,Byte 2=0
+CmdTranslator=Translator(lsb,0,8,0), Translator(lsb,1,8,8)
 Notes=audio/0300
 DevParms=Device Code:8=165
 DeviceTranslator=Translator(lsb)
@@ -1176,30 +1293,33 @@ Code.740=0E 14 12 80 10 F6 B8 01 16 08 08 02 F7 01 98 69 \
          34 55 06 81 02 3C 01 69 1F 7F 22 00 E6 69 0F 7F \
          22 00 4C 03 FF
 
-#[Pioneer 3DEV]
-#PID=00 6A
-#CmdTranslator=Translator(lsb)
-#CmdParms=OBC=0
-#Notes=audio/1023
-#DevParms=Device 1,Device 2,Device 3
-#FixedData=45 a5 25
-#DefaultCmd=00 88
-#Code.S3C80=3F 84 32 8B 12 E5 44 08 08 01 06 03 00 01 06 00 \
-#           F2 D2 DC 10 13 08 51 08 07 37 0F 0B 37 0D 05 E4 \
-#           05 03 8B 03 E4 04 03 08 07 90 C0 77 00 90 C0 77 \
-#           00 90 C0 77 00 76 C0 FF 6B 1E 18 06 77 04 37 13 \
-#           04 77 03 8B 02 77 02 37 10 04 77 01 8B 02 77 00 \
-#           19 06 19 04 09 05 8B 06 E4 06 04 E4 06 05 E6 10 \
-#           01 E6 11 02 F6 01 46 20 10 F6 01 46 00 10 F6 01 \
-#           0A 7B F1 AF
-#Code.740=0E 14 32 80 10 F6 B8 01 16 08 08 02 F7 01 98 69 \
-#         34 55 06 81 02 E7 61 0D C7 61 06 A5 5F 85 5D 80 \
-#         04 A5 5E 85 5D 06 61 06 61 06 61 64 61 F0 1E 5F \
-#         61 27 60 04 2F 61 80 02 3F 61 17 60 04 0F 61 80 \
-#         02 1F 61 A5 60 85 5E A5 61 85 5F 80 06 A5 60 85 \
-#         5E 85 5F 3C 01 69 22 00 E6 69 22 00 C6 69 22 06 \
-#         90 F4 60
-#
+[Pioneer 3DEV]
+PID=00 6A
+CmdParms=Device:1|2|3,OBC=0
+CmdParmInit=PickInitializer(0,0,1,2);
+CmdTranslator=Translator(comp,0,2,8,0,1) Translator(lsb,1,8,0)
+Notes=audio/1023
+DevParms=Device 1=162,Device 2=165,Device 3=164
+DeviceTranslator=Translator(lsb,0,8,0) Translator(lsb,1,8,8) \
+                 Translator(lsb,2,8,16)
+FixedData=45 a5 25
+DefaultCmd=00 80
+Code.S3C80=3F 84 32 8B 12 E5 44 08 08 01 06 03 00 01 06 00 \
+           F2 D2 DC 10 13 08 51 08 07 37 0F 0B 37 0D 05 E4 \
+           05 03 8B 03 E4 04 03 08 07 90 C0 77 00 90 C0 77 \
+           00 90 C0 77 00 76 C0 FF 6B 1E 18 06 77 04 37 13 \
+           04 77 03 8B 02 77 02 37 10 04 77 01 8B 02 77 00 \
+           19 06 19 04 09 05 8B 06 E4 06 04 E4 06 05 E6 10 \
+           01 E6 11 02 F6 01 46 20 10 F6 01 46 00 10 F6 01 \
+           0A 7B F1 AF
+Code.740=0E 14 32 80 10 F6 B8 01 16 08 08 02 F7 01 98 69 \
+         34 55 06 81 02 E7 61 0D C7 61 06 A5 5F 85 5D 80 \
+         04 A5 5E 85 5D 06 61 06 61 06 61 64 61 F0 1E 5F \
+         61 27 60 04 2F 61 80 02 3F 61 17 60 04 0F 61 80 \
+         02 1F 61 A5 60 85 5E A5 61 85 5F 80 06 A5 60 85 \
+         5E 85 5F 3C 01 69 22 00 E6 69 22 00 C6 69 22 06 \
+         90 F4 60
+
 [Proton]
 PID=00 5C
 CmdTranslator=Translator(lsb,comp)
@@ -1261,10 +1381,11 @@ Code.6805-C9=0C 1D 12 20 11 C0 C0 20 20 08 08 02 13 02 0A 03 \
 
 #[RC-5/5x Combo]
 #PID=00 73
-#CmdTranslator=Translator(0,8,8)
-#CmdParms=OBC=0
+#CmdParms=Device:1|2|3|4,Unit,OBC=0
+#CmdTranslator=Translator(lsb,comp,0,5,0)
+#CmdParmInit=PickInitializer(0,N0,N1,N2,N3)
 #Notes=
-#DevParms=RC-5x dev1,RC-5x dev2,RC-5x dev3,RC-5x dev4
+#DevParms=RC-5x dev1:5,RC-5x dev2=[-0]:5,RC-5x dev3:5=[-1],RC-5x dev4:5=[-2]
 #FixedData=00 00 00 00
 #DefaultCmd=1f 00
 #CmdIndex=1
