--- a/protocols.ini
+++ b/protocols.ini
@@ -16,7 +16,8 @@
 #      <default value> is the default value to be used.  If there is a choice
 #      list, it is the index of the default choice.  If the default value is in square brackets,
 #      it is the index of the device parameter from which to get the default value.  If the index is
-#      preceeded by a dash (-) it means the default value will be calculated by subtracting from the maximum allowable #      value (this essentially mean complementing it).
+#      preceeded by a dash (-) it means the default value will be calculated by subtracting from the maximum allowable
+#      value (this essentially mean complementing it).
 # DeviceTranslator=className(parms)
 #      provides mapping between DevParms and fixed data
 #      className is the name of a class that extends the class
@@ -738,8 +739,7 @@ PID=01 41
 DevParms=Device 1,Sub Device 1=[-0],Device 2,Sub Device 2=[-2]
 DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) \
                  Translator(lsb,comp,2,8,16) Translator(lsb,comp,3,8,24)
-FixedData=ff 00 ff 00
-FixedData.S3C80=ff 00 ff 00 00 00
+FixedData=ff 00 ff 00 00 00
 CmdTranslator=Translator(lsb,0,8,0) Translator(lsb,comp,1,8,8)
 CmdParms=Device:0|1,OBC=0
 CmdParmInit=PickInitializer(0,N0,N2)
@@ -750,6 +750,20 @@ Code.S3C80=43 8B 22 8B 12 CF 44 08 08 01 18 01 06 01 18 03 \
            39 D2 DC 11 94 08 B6 20 01 76 05 80 EB 08 E6 04 \
            FE E6 05 F1 8B 06 E6 04 BE E6 05 B1 E4 06 07 60 \
            07 20 10 46 29 0D 8D 01 49
+
+[NEC1 2DEV Combo]
+PID=01 41
+VariantName=1
+DevParms=Device 1,Sub Device 1=[-0],Device 2,Sub Device 2=[-2]
+DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) \
+                 Translator(lsb,comp,2,8,16) Translator(lsb,comp,3,8,24)
+FixedData=ff 00 ff 00
+CmdTranslator=Translator(lsb,0,8,0) Translator(lsb,comp,1,8,8)
+CmdParms=Device:0|1,OBC=0
+CmdParmInit=PickInitializer(0,N0,N2)
+DefaultCmd=00 00
+CmdIndex=1
+Notes=38.1 kHz
 Code.740=0B 1A 22 80 15 E3 BE 01 16 08 08 01 A1 03 17 69 \
          78 54 06 C7 02 08 01 01 03 DB E7 5F 08 3C FE 5D \
          3C F1 5E 80 06 3C BE 5D 3C B1 5E A5 60 85 5F 44 \
@@ -1253,30 +1267,58 @@ Notes=DVD/0525,0571
 DefaultCmd=00 00
 CmdIndex=0
 
-#[Pioneer MIX]
-#PID=00 7E
-#CmdTranslator=Translator(lsb,comp)
-#CmdParms=OBC=0
-#Notes=New Pioneer
-#DevParms=Device 1,Device 2,Cmd1 (OBC),Cmd2 (OBC)
-#FixedData=9a 7a 0a fa
-#DefaultCmd=00 00
-#Code.S3C80=40 84 42 8B 12 E5 44 08 08 01 09 00 FA 01 09 03 \
-#           16 C3 3C 10 A9 08 43 76 08 02 6B 03 E4 06 04 76 \
-#           08 01 EB 06 46 29 01 8D 01 46 B0 01 68 07 E4 04 \
-#           07 F6 01 46 E6 01 02 69 07 F6 01 46 F6 01 0A 7B \
-#           E9 AF
-#Code.740=0A 18 42 80 10 F6 B8 01 16 08 08 01 9F 02 FF 61 \
-#         36 5B 06 81 02 37 62 04 A5 5E 85 60 07 62 05 2F \
-#         7F 4C 00 FF 3C 01 69 3C 00 5B A5 61 85 57 A5 5E \
-#         85 88 20 00 FF 3C 04 69 3C 02 5B A5 57 85 60 20 \
-#         00 FF 22 06 90 DE 60
-#Code.6805-C9=0A 19 42 20 10 F6 F8 00 16 08 08 01 9B 02 FB 1F \
-#             EB 55 06 76 02 03 5F 04 B6 5B B7 5D 00 5F 05 10 \
-#             7C CC 01 83 A6 01 B7 66 BE 5E B6 5B BF 53 B7 5D \
-#             CD 01 83 A6 04 B7 66 A6 02 B7 58 BE 53 BF 5D CD \
-#             01 83 3A 58 3A 58 CD 01 8C 24 D9 81
-#
+[Pioneer MIX]
+PID=00 7E
+DefaultCmd=00 00
+CmdIndex=0
+CmdParms=Prefix Device:none|dev1,Prefix Command:none|Cmd 1|Cmd 2,Device:dev1|dev2,OBC=0
+CmdTranslator=Translator(lsb,comp,3) PioneerMixTranslator()
+CmdParmInit=PickInitializer(0,,0) PickInitializer(1,,2,3) PickInitializer(2,0,1)
+ImportTranslator=Translator(0,2,14) Translator(lsb,comp,1,8,0)
+DevParms=Device 1=166,Device 2=175,Cmd1 (OBC)=161,Cmd2 (OBC)=160
+DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,16) \
+                 Translator(lsb,comp,2,8,8) Translator(lsb,comp,3,8,24)
+FixedData=9a 7a 0a fa
+Notes=Pioneer has started creating new devices that use a similar mix of \
+codes as the Pioneer DVD protocols, but they don't follow the same \
+rules, so these need to be entered manually using the Pioneer MIX \
+protocol. If using the DVD/DVD2 version doesn't work, try this one \
+instead.\
+\n\n\
+On the Setup sheet, enter the device details:\
+\n\n\
+Device 1 = the device code found in both the single-style signals \
+and the first half of the double-style signals.\
+\n\n\
+Device 2 = the device code found in the second half of the double-\
+style signals.\
+\n\n\
+Cmd1 (OBC) = the OBC command code used in the first half of most of the \
+double-style signals.\
+\n\
+Cmd2 (OBC)= the OBC command code used in the rest of the double-style \
+signals (if present)\
+\n\n\
+Then on the Functions sheet, you indicate which style of signal to \
+use for each function. Do this by selecting either "Single" or "Double" \
+for the Style column. For "Double" style commands, select the command to \
+to be used in the "2nd Cmd" column.  This column is ignored when the Style is "Single".
+Code.S3C80=40 84 42 8B 12 E5 44 08 08 01 09 00 FA 01 09 03 \
+           16 C3 3C 10 A9 08 43 76 08 02 6B 03 E4 06 04 76 \
+           08 01 EB 06 46 29 01 8D 01 46 B0 01 68 07 E4 04 \
+           07 F6 01 46 E6 01 02 69 07 F6 01 46 F6 01 0A 7B \
+           E9 AF
+Code.740=0A 18 42 80 10 F6 B8 01 16 08 08 01 9F 02 FF 61 \
+         36 5B 06 81 02 37 62 04 A5 5E 85 60 07 62 05 2F \
+         7F 4C 00 FF 3C 01 69 3C 00 5B A5 61 85 57 A5 5E \
+         85 88 20 00 FF 3C 04 69 3C 02 5B A5 57 85 60 20 \
+         00 FF 22 06 90 DE 60
+Code.6805-C9=0A 19 42 20 10 F6 F8 00 16 08 08 01 9B 02 FB 1F \
+             EB 55 06 76 02 03 5F 04 B6 5B B7 5D 00 5F 05 10 \
+             7C CC 01 83 A6 01 B7 66 BE 5E B6 5B BF 53 B7 5D \
+             CD 01 83 A6 04 B7 66 A6 02 B7 58 BE 53 BF 5D CD \
+             01 83 3A 58 3A 58 CD 01 8C 24 D9 81
+
 [Pioneer 2CMD]
 PID=00 5F
 CmdParms=OBC=0,Byte 2=0
@@ -1639,44 +1681,103 @@ Code.S3C80=47 93 71 8B 12 87 05 08 04 00 DE 00 00 00 00 00 \
            CA D4 44 05 35 01 A8 0C 0A 02 11 10 09 10 0A 10 \
            C1 1E 10 09 0A F3 19 0A 8D 01 46
 
-#[ReplayTV (Simple)]
-#PID=00 40
-#Code.740=0C 1C 31 A9 60 20 DB 00 A2 16 A0 02 22 44 A5 5D \
-#         85 56 20 6C 01 A2 1B A0 02 22 44 A9 20 20 DB 00 \
-#         A5 5E 20 71 01 A5 5F 20 71 01 A5 60 20 71 01 A2 \
-#         2A A0 A1 22 44 22 06 90 CA 60 3C 04 57 80 05 85 \
-#         56 3C 08 57 26 56 B0 0D A2 86 A0 01 22 44 A9 10 \
-#         20 DB 00 80 0B A9 10 20 DB 00 A2 86 A0 01 22 44 \
-#         C6 57 D0 E0 60
-#Code.6805-C9=0d 1c 31 a6 60 bd b7 a6 02 ae 18 cd 01 9f 9d 9d \
-#             cd 01 92 a6 04 97 ad 27 a6 02 ae 18 cd 01 9f 9d \
-#             9d a6 20 bd b7 b6 5b ad 12 b6 5c ad 0e b6 5d ad \
-#             0a a6 b3 ae dd cd 01 9e cc 01 89 b7 50 a6 08 b7 \
-#             51 0e 50 02 ad 12 a6 10 bd b7 0f 50 02 ad 09 38 \
-#             50 3a 51 26 ec 81 ad 00 a6 8d 4a 26 fd 26 00 81
-#
-#[ReplayTV (Advanced)]
-#OldNames=ReplayTV Hacked,ReplayTV 1994
-#PID=01 45
-#CmdTranslator=Translator()
-#CmdParms=OBC=0
-#Notes=hacked version
-#DevParms=Device Code,Unit Code
-#FixedData=a9 35 55 65 55 55 00
-#Code.S3C80=47 93 71 8B 12 87 04 08 04 00 DE 00 00 00 00 00 \
-#           CA D4 44 05 35 01 A8 58 0A 6C 26 37 5F 0F 37 5C \
-#           11 68 C5 5C 9A 37 66 0A E6 0D 04 5C A1 37 5C 02 \
-#           6C 27 0C 0A 04 0A 0A 10 09 10 C5 10 0A 20 0A 10 \
-#           09 0A F1 37 52 07 F6 01 46 58 C6 8B E5 20 29 8D \
-#           01 46
-#Code.740=0c 1c 31 a9 60 20 db 00 a2 16 a0 02 22 44 a5 5d \
-#         85 56 20 6c 01 a2 1b a0 02 22 44 a9 20 20 db 00 \
-#         a5 5e 20 71 01 a5 5f 20 71 01 a5 60 20 71 01 a2 \
-#         2a a0 a1 22 44 22 06 90 ca 60 3c 04 57 80 05 85 \
-#         56 3c 08 57 26 56 b0 0d a2 86 a0 01 22 44 a9 10 \
-#         20 db 00 80 0b a9 10 20 db 00 a2 86 a0 01 22 44 \
-#         c6 57 d0 e0 60
-#
+[ReplayTV (Simple)]
+PID=00 40
+DevParms=Device Code=1,Unit Code=0
+DeviceTranslator=Translator(0,1,12,7) Translator(0,1,13,7,comp) \
+                 Translator(0,1,14,6) Translator(0,1,15,6,comp) \
+                 Translator(0,1,16,5) Translator(0,1,17,5,comp) \
+                 Translator(0,1,18,4) Translator(0,1,19,4,comp) \
+                 Translator(0,1,20,3) Translator(0,1,21,3,comp) \
+                 Translator(0,1,22,2) Translator(0,1,23,2,comp) \
+                 Translator(0,1,24,1) Translator(0,1,25,1,comp) \
+                 Translator(0,1,26,0) Translator(0,1,27,0,comp) \
+                 Translator(1,1,28,7) Translator(1,1,29,7,comp) \
+                 Translator(1,1,30,6) Translator(1,1,31,6,comp) \
+                 Translator(1,1,32,5) Translator(1,1,33,5,comp) \
+                 Translator(1,1,34,4) Translator(1,1,35,4,comp) \
+                 Translator(1,1,36,3) Translator(1,1,37,3,comp) \
+                 Translator(1,1,38,2) Translator(1,1,39,2,comp) \
+                 Translator(1,1,40,1) Translator(1,1,41,1,comp) \
+                 Translator(1,1,42,0) Translator(1,1,43,0,comp)
+FixedData=a9 35 55 65 55 55 00
+CmdParms=OBC=0
+CmdTranslator=Translator()
+Code.S3C80=47 93 71 8B 12 87 05 08 04 00 DE 00 00 00 00 00 \
+           CA D4 44 05 35 01 A8 0C 0A 02 11 10 09 10 0A 10 \
+           C1 1E 10 09 0A F3 19 0A 8D 01 46
+
+[ReplayTV (Simple)]
+PID=00 40
+VariantName=1
+DevParms=Device Code=1,Unit Code=0
+DeviceTranslator=Translator(0,8,8) Translator(1,8,16)
+FixedData=E0 01 00
+CmdParms=OBC=0
+CmdTranslator=Translator()
+Code.740=0C 1C 31 A9 60 20 DB 00 A2 16 A0 02 22 44 A5 5D \
+         85 56 20 6C 01 A2 1B A0 02 22 44 A9 20 20 DB 00 \
+         A5 5E 20 71 01 A5 5F 20 71 01 A5 60 20 71 01 A2 \
+         2A A0 A1 22 44 22 06 90 CA 60 3C 04 57 80 05 85 \
+         56 3C 08 57 26 56 B0 0D A2 86 A0 01 22 44 A9 10 \
+         20 DB 00 80 0B A9 10 20 DB 00 A2 86 A0 01 22 44 \
+         C6 57 D0 E0 60
+Code.6805-C9=0d 1c 31 a6 60 bd b7 a6 02 ae 18 cd 01 9f 9d 9d \
+             cd 01 92 a6 04 97 ad 27 a6 02 ae 18 cd 01 9f 9d \
+             9d a6 20 bd b7 b6 5b ad 12 b6 5c ad 0e b6 5d ad \
+             0a a6 b3 ae dd cd 01 9e cc 01 89 b7 50 a6 08 b7 \
+             51 0e 50 02 ad 12 a6 10 bd b7 0f 50 02 ad 09 38 \
+             50 3a 51 26 ec 81 ad 00 a6 8d 4a 26 fd 26 00 81
+
+[ReplayTV (Advanced)]
+OldNames=ReplayTV Hacked,ReplayTV 1994
+PID=01 45
+CmdTranslator=Translator()
+CmdParms=OBC=0
+Notes=hacked version
+DevParms=Device Code=1,Unit Code=0
+DeviceTranslator=Translator(0,1,12,7) Translator(0,1,13,7,comp) \
+                 Translator(0,1,14,6) Translator(0,1,15,6,comp) \
+                 Translator(0,1,16,5) Translator(0,1,17,5,comp) \
+                 Translator(0,1,18,4) Translator(0,1,19,4,comp) \
+                 Translator(0,1,20,3) Translator(0,1,21,3,comp) \
+                 Translator(0,1,22,2) Translator(0,1,23,2,comp) \
+                 Translator(0,1,24,1) Translator(0,1,25,1,comp) \
+                 Translator(0,1,26,0) Translator(0,1,27,0,comp) \
+                 Translator(1,1,28,7) Translator(1,1,29,7,comp) \
+                 Translator(1,1,30,6) Translator(1,1,31,6,comp) \
+                 Translator(1,1,32,5) Translator(1,1,33,5,comp) \
+                 Translator(1,1,34,4) Translator(1,1,35,4,comp) \
+                 Translator(1,1,36,3) Translator(1,1,37,3,comp) \
+                 Translator(1,1,38,2) Translator(1,1,39,2,comp) \
+                 Translator(1,1,40,1) Translator(1,1,41,1,comp) \
+                 Translator(1,1,42,0) Translator(1,1,43,0,comp)
+FixedData=a9 35 55 65 55 55 00
+Code.S3C80=47 93 71 8B 12 87 04 08 04 00 DE 00 00 00 00 00 \
+           CA D4 44 05 35 01 A8 58 0A 6C 26 37 5F 0F 37 5C \
+           11 68 C5 5C 9A 37 66 0A E6 0D 04 5C A1 37 5C 02 \
+           6C 27 0C 0A 04 0A 0A 10 09 10 C5 10 0A 20 0A 10 \
+           09 0A F1 37 52 07 F6 01 46 58 C6 8B E5 20 29 8D \
+           01 46
+
+[ReplayTV (Advanced)]
+OldNames=ReplayTV Hacked,ReplayTV 1994
+PID=01 45
+VariantName=1
+CmdTranslator=Translator()
+CmdParms=OBC=0
+Notes=hacked version
+DevParms=Device Code=1,Unit Code=0
+DeviceTranslator=Translator(0,8,8) Translator(1,8,16)
+FixedData=E0 01 00
+Code.740=0c 1c 31 a9 60 20 db 00 a2 16 a0 02 22 44 a5 5d \
+         85 56 20 6c 01 a2 1b a0 02 22 44 a9 20 20 db 00 \
+         a5 5e 20 71 01 a5 5f 20 71 01 a5 60 20 71 01 a2 \
+         2a a0 a1 22 44 22 06 90 ca 60 3c 04 57 80 05 85 \
+         56 3c 08 57 26 56 b0 0d a2 86 a0 01 22 44 a9 10 \
+         20 db 00 80 0b a9 10 20 db 00 a2 86 a0 01 22 44 \
+         c6 57 d0 e0 60
+
 [ReplayTV (Official)]
 OldNames=ReplayTV Official
 PID=00 92
@@ -1951,27 +2052,28 @@ Code.740=0A 17 01 80 12 8C 80 08 A0 00 05 06 1D 09 AD 00 \
          00 A9 E3 20 DB 00 20 DB 00 A2 D7 A0 03 22 44 22 \
          06 90 E5 60
 
-#[Zenith]
-#PID=00 22
-#CmdTranslator=Translator()
-#CmdParms=OBC=0
-#Notes=
-#DevParms=Signal Length,Long RECORD,Style:0|1
-#FixedData=06
-#Code.S3C80=2F 94 11 8B 13 C5 81 40 08 00 00 FA 00 E6 00 FA \
-#           09 E2 5F 7C 00 FA 07 ED 08 03 37 0E 0A 77 0E F6 \
-#           01 46 FB 03 E6 0D 15 CF 10 C0 00 C0 18 C0 CF 36 \
-#           C0 08 FB 04 19 12 8B 02 09 13 2C 08 08 04 18 C0 \
-#           60 C1 10 C0 10 04 10 03 10 C1 10 04 10 03 2A F2 \
-#           10 04 10 03 9E 0C 1E 1C C0 2C 04 F6 01 5B 8D 01 \
-#           46
-#Code.740=07 1B 11 F7 5D 07 22 10 D0 03 3C 14 83 FF 5D BF \
-#         3C AF 3E EF 28 3C C8 22 3C AF 23 FF 28 A5 5D 85 \
-#         56 3C 01 55 22 23 44 54 A9 14 20 DB 00 E7 54 1D \
-#         A2 9C A0 07 22 44 44 54 C6 55 D0 EC 3C 02 55 06 \
-#         54 C6 56 D0 E3 22 06 A7 3E FD 90 C3 60 A2 A2 A0 \
-#         01 22 44 A9 14 20 DB 00 A2 4F A0 06 22 44 80 D6
-#
+[Zenith]
+PID=00 22
+CmdTranslator=ZenithCmdTranslator() TranslatorFromDev(2,1,0)
+CmdParms=OBC=0
+Notes=
+DevParms=Signal Length:3=6,Long RECORD:bool,Style:0|1
+DeviceTranslator=ZenithTranslator() Translator(1,1,0)
+FixedData=06
+Code.S3C80=2F 94 11 8B 13 C5 81 40 08 00 00 FA 00 E6 00 FA \
+           09 E2 5F 7C 00 FA 07 ED 08 03 37 0E 0A 77 0E F6 \
+           01 46 FB 03 E6 0D 15 CF 10 C0 00 C0 18 C0 CF 36 \
+           C0 08 FB 04 19 12 8B 02 09 13 2C 08 08 04 18 C0 \
+           60 C1 10 C0 10 04 10 03 10 C1 10 04 10 03 2A F2 \
+           10 04 10 03 9E 0C 1E 1C C0 2C 04 F6 01 5B 8D 01 \
+           46
+Code.740=07 1B 11 F7 5D 07 22 10 D0 03 3C 14 83 FF 5D BF \
+         3C AF 3E EF 28 3C C8 22 3C AF 23 FF 28 A5 5D 85 \
+         56 3C 01 55 22 23 44 54 A9 14 20 DB 00 E7 54 1D \
+         A2 9C A0 07 22 44 44 54 C6 55 D0 EC 3C 02 55 06 \
+         54 C6 56 D0 E3 22 06 A7 3E FD 90 C3 60 A2 A2 A0 \
+         01 22 44 A9 14 20 DB 00 A2 4F A0 06 22 44 80 D6
+
 # [pid: 00 01]
 # PID=00 01
 # DefaultCmd=00
