Lay ground work for Device Combiner support
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@380 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -316,22 +316,72 @@ Code.740=0B 19 12 80 11 E8 80 01 0A 05 08 01 F5 03 53 41 \
          5F 85 5E A5 5D 0A CA D0 FC 85 5F 3C 00 57 44 5F \
          44 5E 22 00 44 57 D0 F6 22 06 90 EF 60
 
-#[Device Combiner]
-#PID=01 44
-#OBCTranslator=Translator()
-#CmdParms=OBC=0
-#CmdTranslator=Translator()
-#Notes=hacked version
-#Code.S3C80=00 00 22 08 06 38 05 56 05 F0 6B 07 E4 05 0D F0 \
-#           0D 90 0D 56 C3 0F 2C FF E7 62 3A E7 32 39 E3 42 \
-#           E3 52 1C 03 E3 72 D7 17 1E A2 36 3B F7 97 01 FF \
-#           06 D9 02 F6 15 A5 8D ED A0
-#Code.740=00 00 02 A4 5D BE 7B 01 BD 7B 01 85 E7 BD 7C 01 \
-#         85 E6 20 ED A0 B0 31 A0 02 B1 AD 4A 4A 4A 4A AA \
-#         A5 5E A4 5D 95 5D E0 00 F0 1B 86 E2 B9 7B 01 C6 \
-#         E2 18 65 E2 AA A4 E2 80 08 BD 7D 01 99 5D 00 88 \
-#         CA C0 FF D0 F4 4C 15 A5 60
-#
+[Device Combiner]
+PID=01 44
+Type=DeviceCombiner
+FixedData=00 00
+DefaultCmd=00 00
+CmdIndex=1
+CmdParms=Protocol ID:4,Duration:0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15=0,OBC=0
+CmdTranslator=Translator(0,4,4) Translator(1,4,0) Translator(2,8,8)
+Notes=The Device Combiner allows you to combine up to 16 different \
+protocols into one Device Upgrade for S3C8 and P8/740 remotes. It \
+is available as a Beta version for M6805 remotes. \
+\n\n\
+Any protocols specified in the Device Combiner MUST use 1-byte \
+function commands. P8- and M6-style remotes also require that the \
+protocols MUST be built-in (not an upgrade). \
+\n\n\
+NOTE: On S3C8 remotes, when specifying an upgraded protocol ID, \
+the user MUST ensure that the protocol code is installed on the \
+remote (using IR), as KM has no way to verify this. \
+\n\n\
+There is also an optional Duration Control setting that can be \
+used for each function, however, at this time it is only available \
+for S3C8 remotes. \
+\n\n\
+Setting up the Device Combiner:\
+\n\n\
+1. First, you need the individual Protocol ID's and Fixed Data for \
+each device you wish to combine. You can get this info either from \
+the devices4.xls spreadsheet, or you can use keymap-master to \
+create the code, and use the values from the Protocol ID and Fixed \
+Data cells on the Setup sheet. \
+\n\n\
+2. Next, start a NEW Upgrade in KM, select Device Combiner and \
+enter the data that you obtained in step 1 above into the Device \
+Combiner table. Remember, you can combine up to 16 devices. \
+\n\n\
+3. Then, go to the Functions sheet and enter the EFC's (EFC-style \
+Button Codes MUST be used) for all of the various functions. In \
+the byte2 column, enter a zero-based number (0 to 15) (default = 0 \
+= 1st device) to tell KM which Protocol ID to use. This value can \
+be found in the Device Combiner's "#" column on the Setup sheet. \
+\n\n\
+For example, if you want to setup a function for the 2nd protocol \
+in the Device Combiner table, the byte2 entry would be "1". \
+\n\n\
+4. Last, to enable Duration Control (S3C8 remotes only) for the \
+function, the byte2 entry will be the number from step 3 above, \
+then a "space", and then another number from 0 to 15 that \
+indicates the duration multiple to be used (default = 0 = none). \
+\n\n\
+For example, if you're setting up a function to use the 2nd \
+protocol from the Device Combiner table, and want a duration \
+multiple of 3, the byte2 entry would be: "1 3" \
+\n\n\
+Copy and paste the Device Upgrade Code and the Protocol Code into \
+IR.exe in the normal fashion.
+Code.S3C80=00 00 22 08 06 38 05 56 05 F0 6B 07 E4 05 0D F0 \
+           0D 90 0D 56 C3 0F 2C FF E7 62 3A E7 32 39 E3 42 \
+           E3 52 1C 03 E3 72 D7 17 1E A2 36 3B F7 97 01 FF \
+           06 D9 02 F6 15 A5 8D ED A0
+Code.740=00 00 02 A4 5D BE 7B 01 BD 7B 01 85 E7 BD 7C 01 \
+         85 E6 20 ED A0 B0 31 A0 02 B1 AD 4A 4A 4A 4A AA \
+         A5 5E A4 5D 95 5D E0 00 F0 1B 86 E2 B9 7B 01 C6 \
+         E2 18 65 E2 AA A4 E2 80 08 BD 7D 01 99 5D 00 88 \
+         CA C0 FF D0 F4 4C 15 A5 60
+
 [Dishplayer]
 PID=01 0F
 DevParms=Device Code:2=3,Unit:5=0
