Fix NECx2 device translator declarations
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@385 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -863,8 +863,8 @@ PID=00 5A
 CmdTranslator=Translator(lsb,comp)
 CmdParms=OBC=0
 DevParms=Device Number,Sub Device=[0],Parm:$=31
-DeviceTranslator=Translator(lsb,comp,0,8,16) Translator(lsb,comp,1,8,8) \
-                 Translator(comp,2,8,0)
+DeviceTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1,8,16) \
+                 Translator(2,8,0)
 FixedData=31 ff ff
 Notes=38.1 kHz
 Code.S3C80=43 8B 31 8B 12 CF 44 08 08 01 18 01 06 01 18 03 \
