Add most support for Device Combiner.  Importing a KM file that uses Device Combiner is not yet supported.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@391 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -322,8 +322,8 @@ Type=DeviceCombiner
 FixedData=00 00
 DefaultCmd=00 00
 CmdIndex=1
-CmdParms=Protocol ID:4,Duration:0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15=0,OBC=0
-CmdTranslator=Translator(0,4,4) Translator(1,4,0) Translator(2,8,8)
+CmdParms= Combiner Device :0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15,Duration:0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15=0
+CmdTranslator=Translator(0,4,4) Translator(1,4,0)
 Notes=The Device Combiner allows you to combine up to 16 different \
 protocols into one Device Upgrade for S3C8 and P8/740 remotes. It \
 is available as a Beta version for M6805 remotes. \
@@ -1946,30 +1946,32 @@ Code.6805-C9=0A 19 31 20 12 B8 90 08 30 05 07 01 B5 01 B5 12 \
 
 [Sony Combo (old)]
 PID=00 27
-VariantName=new
+VariantName=old
 CmdTranslator=Translator(lsb)
 CmdParms=OBC=0
 Notes=12/15/20 Combo
 DevParms=Sony20 subdev1,Sony20 subdev2
 DeviceTranslator=Translator(lsb,0,8) Translator(lsb,1,8,8)
 FixedData=00 00
-DefaultHex=00 00
+DefaultCmd=00 00
 Code.S3C80=3A 8A 22 8B 15 F6 15 05 07 02 58 01 18 01 2C 01 \
            18 57 D0 04 B0 01 18 08 03 00 76 05 01 EB 1A E6 \
            28 C8 E6 12 00 E6 22 00 E6 24 05 E4 05 03 E4 06 \
            04 E6 10 00 E6 01 01 8B 02 00 11 8D 01 46
 
 [Sony Combo (new)]
+OldNames=Sony Combo
 PID=00 27
 VariantName=new
 CmdTranslator=Translator(lsb)
-CmdParms=OBC=0
+CmdParms=OBC=0,Protocol:Sony12|Sony15|Sony20,Device,Sub-device:none|1|2|3|4=0
+CmdParmInit=PickInitializer(3,,n0,n1,n2,n3)
 Notes=12/15/20 Combo
 DevParms=Sony20 subdev1,Sony20 subdev2,Sony20 subdev3,Sony20 subdev4
 DeviceTranslator=Translator(lsb,0,8) Translator(lsb,1,8,8) \
                  Translator(lsb,2,8,16) Translator(lsb,3,8,24)
 FixedData=00 00 00 00
-DefaultHex=00 00
+DefaultCmd=00 00
 Code.S3C80=3A 8A 42 8B 15 F8 15 05 07 02 58 01 18 01 2C 01 \
            18 57 D0 04 B0 01 18 08 03 08 76 07 01 EB 17 76 \
            08 01 6B 0F E6 28 F9 E6 12 08 08 08 E0 C0 56 C0 \
@@ -2010,7 +2012,7 @@ DeviceTranslator=Translator(lsb,comp,0,4) \
 FixedData=00
 CmdParms=OBC:6=0
 CmdTranslator=Translator(lsb,comp,0,6)
-DefaultHex=00
+DefaultCmd=00
 Code.740=0F 1D 11 80 0C E0 A2 01 10 06 06 03 97 06 E0 4E \
          14 17 5A 02 6F 5D 4C 00 FF
 
@@ -2024,7 +2026,7 @@ FixedData=00
 CmdParms=OBC:6=0
 CmdTranslator=Translator(lsb,comp,0,6,1) \
               TranslatorFromDev(comp,0,1,0,5)
-DefaultHex=00
+DefaultCmd=00
 Code.S3C80=76 76 11 8B 0E C5 41 05 07 00 F2 03 DC 00 F2 08 \
            BE 9C 40 31 02 27 07 03 31 C2 8D 01 46
 
