--- a/protocols.ini
+++ b/protocols.ini
@@ -372,15 +372,26 @@ multiple of 3, the byte2 entry would be: "1 3" \
 \n\n\
 Copy and paste the Device Upgrade Code and the Protocol Code into \
 IR.exe in the normal fashion.
-Code.S3C80=00 00 22 08 06 38 05 56 05 F0 6B 07 E4 05 0D F0 \
-           0D 90 0D 56 C3 0F 2C FF E7 62 3A E7 32 39 E3 42 \
-           E3 52 1C 03 E3 72 D7 17 1E A2 36 3B F7 97 01 FF \
-           06 D9 02 F6 15 A5 8D ED A0
-Code.740=00 00 02 A4 5D BE 7B 01 BD 7B 01 85 E7 BD 7C 01 \
-         85 E6 20 ED A0 B0 31 A0 02 B1 AD 4A 4A 4A 4A AA \
-         A5 5E A4 5D 95 5D E0 00 F0 1B 86 E2 B9 7B 01 C6 \
-         E2 18 65 E2 AA A4 E2 80 08 BD 7D 01 99 5D 00 88 \
-         CA C0 FF D0 F4 4C 15 A5 60
+Code.S3C80=00 00 22 08 06 96 10 04 90 05 6B 03 E4 05 0D 38 \
+           04 2C FF E7 62 45 E7 32 44 E3 42 E3 52 1C 03 E3 \
+           72 D7 17 1E A2 36 3B F7 97 01 FF 06 D9 02 56 8D \
+           BF C6 CA 01 00 C6 C2 20 31 70 C3 70 C2 C6 DA 41 \
+           51 1F 40 EC
+#Code.740=00 00 02 A4 5D BE 7B 01 BD 7B 01 85 E7 BD 7C 01 \
+#         85 E6 20 20 31 B0 31 A0 02 B1 ## 4A 4A 4A 4A AA \
+#         A5 5E A4 5D 95 5D E0 00 F0 1B 86 E2 B9 7B 01 C6 \
+#         E2 18 65 E2 AA A4 E2 80 08 BD 7D 01 99 5D 00 88 \
+#         CA C0 FF D0 F4 4C 40 EC 60
+#Code.6805-C9=00 00 02 BE 5A DE 01 47 BF E0 D6 01 47 B7 C1 D6 01 \
+#             48 B7 C2 CD 20 31 24 01 81 AB 02 24 01 5C CD ## 97 \
+#             54 54 54 54 B6 5B E7 5A BF 41 51 BF E1 27 13 3F E2 \
+#             BE E0 D6 01 49 BE E2 E7 5A 3C E0 3C E2 3A E1 26 EF \
+#             CC 40 EC
+#Code.6805-RC16/18=00 00 02 BE 5A DE 01 47 BF E0 D6 01 47 B7 C1 D6 \
+#                  01 48 B7 C2 CD 20 31 24 01 81 AB 02 24 01 5C CD \
+#                  ## 97 54 54 54 54 B6 5B E7 5A BF 41 51 BF E1 27 \
+#                  13 3F E2 BE E0 D6 01 49 BE E2 E7 5A 3C E0 3C E2 \
+#                  3A E1 26 EF CC 40 EC
 
 [Dishplayer]
 PID=01 0F
